--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@material-ui/core": "^4.9.1",
     "add": "^2.0.6",
     "axios": "^0.18.0",
+    "firebase": "^7.8.1",
+    "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.0",
     "lodash.debounce": "^4.0.8",
     "react": "^16.8.6",
