--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "reactjs-toastr": "^1.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "toastr": "^2.1.4",
     "yarn": "^1.22.0"
   }
 }
