--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "toastr": "^2.1.4",
     "yarn": "^1.22.0"
   }
 }
