--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.1",
+    "@material-ui/styles": "^4.9.0",
     "add": "^2.0.6",
     "axios": "^0.18.0",
     "firebase": "^7.8.1",
